--- a/css/style.css
+++ b/css/style.css
@@ -85,12 +85,16 @@ p {
     font-size: 30px;
     line-height: 36px;
   }
+  img#avatar {
+    margin-top: 25px;
+  }
 }
 
 /* HEADER */
 header {
   color:#FFFFFF;
   background: url('../images/hero-background.png') top center no-repeat, #f9f9f9;
+  background-size: cover;
 }
 header nav {
   padding:1em 0;
@@ -218,7 +222,7 @@ header .hero img {
 /* PRICING */
 .pricing {
   background: url("../images/pricing-background.jpg") top center no-repeat;
-  background-size:cover;
+  background-size: cover;
   text-align: center;
   padding: 4em 0;
 }
@@ -342,7 +346,7 @@ ul#middle {
 
 /* TESTAMONIALS */
 .testimonials {
-  padding: 4em 0;
+  padding: 4em 0 8em 0;
   text-align: center;
 }
 .testimonials .one-half {
@@ -383,17 +387,85 @@ p.name {
 img#avatar {
   margin-top: 50px;
 }
+@media (min-width: 1824px) {
+  img#avatar {
+    margin-top: 25px;
+  }
+}
 
 /* CTA */
 .calltoaction {
-  padding: 4em 0;
-  text-align: center; 
+  padding: 4em 0 6em 0;
+  text-align: center;
+  color: #FFFFFF;
+  background: url('../images/hero-background.png') top center no-repeat;
+  background-size: cover;
 }
-
+.calltoaction p {
+  padding-bottom: 20px;
+}
+.container-cta {
+  margin-bottom: 100px;
+}
 /* FOOTER */
 footer {
+  background: #35353C;
+  color: #FFFFFF;
+  height: 150px;
   padding: 4em 0;
   text-align: center;
+  position: relative;
+  overflow: hidden;
+  z-index: 0
+}
+.social-icons ul {
+  padding: 0;
+}
+.social-icons ul li {
+  display: inline;
+  list-style-type: none;
+  padding: 10px;
+  margin: 0;
+}
+footer p, footer nav ul {
+  font-size: 14px;
+  font-weight: 100;
+  text-align: center;
+  margin: 10px auto 0;
+}
+footer nav ul li {
+  list-style-type: none;
+  display: inline;
+}
+footer nav ul li a {
+  color:#FFFFFF;
+  text-decoration: none;
+}
+footer .right-footer-block {
+  background-color: transparent;
+}
+footer .logo{
+  padding: 2.35em 0;
+  margin: 0 0 0 auto;
+  display: block;
+}
+footer .middle-footer-block ul {
+  text-align: center;
+}
+footer .quube {
+  font-weight: 700;
+}
+@media (min-width: 992px){
+  footer{
+    height: 100px;
+  }
+  footer p, footer nav ul{
+    padding: 2em 0;
+    text-align: left;
+  }
+  footer .logo{
+    padding: 2em 0 2em 1.5em;
+  }
 }
 
 
