--- a/css/style.css
+++ b/css/style.css
@@ -216,8 +216,12 @@ header .hero img {
   z-index: 999;
 }
 #leftbox {
-  margin-left: 0px;
-  margin-right: -25px;
+  position: relative;
+  left: 70px;
+}
+#rightbox {
+  position: relative;
+  right: 70px;
 }
 .box h3 {
   font-family: "Proxima Nova", Helvetica, Arial, sans-serif;
@@ -360,6 +364,7 @@ img#avatar {
 .container-cta {
   margin-bottom: 100px;
 }
+
 /* FOOTER */
 footer {
   background: #35353C;
@@ -407,153 +412,13 @@ footer .middle-footer-block ul {
 }
 footer .quube {
   font-weight: 700;
-}
-@media (min-width: 992px){
-  footer{
-    height: 100px;
-  }
-  footer p, footer nav ul{
-    padding: 2em 0;
-    text-align: left;
-  }
-  footer .logo{
-    padding: 2em 0 2em 1.5em;
-  }
-}
-
-/* MEDIA QUERIES */
-/* Smartphones */
-@media only screen and (min-width : 320px) and (max-width : 767px) {
-  nav.container {
-    text-align: center;
-  }
-  header img {
-    padding-top: 20px;
-  }
-  nav.container ul {
-    padding-left: 0;
-    float: none;
-  }
-  header li:first-child > a {
-    padding:10px 15px;
-    border:2px solid #FFFFFF;
-    border-radius: 4px;
-    margin: 10px auto;
-  }
-  header {
-    max-height: 480px;
-  }
-  img#laptop {
-    display: none;
-  }
-  .benefits {
-    padding-top: 4em;
-  }
-  .benefits-small, .benefits-large {
-    width: 100%;
-    text-align: center;
-    display: flex;
-  }
-  .benefits-small img, .benefits-large img {
-    width: 25% !important;
-    height: 25% !important;
-    margin: 10px auto;
-  }
-  
-  header .hero h1 {
-    margin-top: 20px;
-    font-size: 30px;
-    padding-top: 0;
-    margin-top: 0;
-  }
-  #even-benefit, #odd-benefit {
-    display: block;
-    padding: 0;
-    margin: 0 auto;
-  }
-  #swap {
-    display: flex !important;
-    flex-direction: column;
-  }
-  #swap1 {
-    order: 2;
-  }
-  #swap2 {
-    order: 1;
-  }
-  .benefits {
-    padding-bottom: 0;
-  }
-  .benefits .container {
-    padding-bottom: 0;
-  }
-  .box {
-    width: auto;
-    margin: 0 auto;
-  }
-  #leftbox {
-    margin-right: auto;
-  }
-  .quote-images {
-    height: 250px;
-  }
-  p.name {
-    text-align: left;
-  }
-  img#avatar {
-    margin-top: 140px;
-  }
-  div.quote {
-    margin-bottom: 50px;
-  }
-  .testimonials {
-    padding-bottom: 2em;
-  }
-  .calltoaction {
-    background-size: inherit;
-  }
-  footer .container.footer-nav-block {
-    text-align: center;
-  }
-  footer {
-    height: auto;
-  }
-  footer .logo {
-    display: block;
-    margin: 15px auto 0 auto;
-    padding: 0;
-  }
-  footer ul {
-    padding-left: 0;
-  }
 }  
 
+/* MEDIA QUERIES */
 @media (min-width: 768px) {
   .container {
     width: 750px;
   }
-  img#laptop {
-    max-width: 94%;
-  }
-  .box {
-    width: 50%;
-    margin: 0 auto;
-  }
-  #leftbox {
-    margin: 0 auto;
-  }
-  footer {
-    height: auto;
-  }
-  footer .logo {
-    display: block;
-    margin: 15px auto 0 auto;
-    padding: 0;
-  }
-  footer ul {
-    padding-left: 0;
-  }
-}  
 }
 
 @media (min-width: 992px) {
@@ -572,17 +437,21 @@ footer .quube {
   .one-fourth {
     width: 21%;
   }
-  img#laptop {
-    max-width: 94%;
+  footer {
+    height: 100px;
+  }
+  footer p, footer nav ul{
+    padding: 2em 0;
+    text-align: left;
+  }
+  footer .logo {
+    padding: 2em 0 2em 1.5em;
   }
 }
 
 @media (min-width: 1200px) {
   .container {
     width: 1170px;
-  }
-  img#laptop {
-    min-width: 100%;
   }
 }
 
