--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ header .hero img {
   background: #f9f9f9;
   background-size:cover;
   text-align: center;
-  padding: 14em 0 4em 0;
+  padding: 12em 0 4em 0;
   border-bottom: 1px solid #f9f9f9;
 }
 .benefits .container {
@@ -217,11 +217,11 @@ header .hero img {
 }
 #leftbox {
   position: relative;
-  left: 70px;
+  left: 0px;
 }
 #rightbox {
   position: relative;
-  right: 70px;
+  right: 0px;
 }
 .box h3 {
   font-family: "Proxima Nova", Helvetica, Arial, sans-serif;
@@ -236,7 +236,7 @@ header .hero img {
   margin:0 -15px 40px;
   padding:25px 0 20px 0;
 }
-ul#middle {
+ul#middle-list {
   margin-bottom: 45px !important;
 }
 .box h4 {
@@ -304,7 +304,7 @@ ul#middle {
 
 /* TESTAMONIALS */
 .testimonials {
-  padding: 4em 0 8em 0;
+  padding: 4em 0 4em 0;
   text-align: center;
 }
 .testimonials .one-half {
@@ -342,12 +342,7 @@ p.name {
   font-weight: 700;
 }
 img#avatar {
-  margin-top: 50px;
-}
-@media (min-width: 1824px) {
-  img#avatar {
-    margin-top: 25px;
-  }
+  margin-top: 75px;
 }
 
 /* CTA */
@@ -415,9 +410,55 @@ footer .quube {
 }  
 
 /* MEDIA QUERIES */
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 991px) {
   .container {
     width: 750px;
+  }
+  img#laptop {
+    max-width: 100%;
+  }
+  .benefits {
+    padding-top: 6em;
+  }
+  #leftbox {
+    position: relative;
+    left: 0px;
+  }
+  #rightbox {
+    position: relative;
+    right: 0px;
+  }
+  .pricing .one-third {
+    width: 100%;
+  }
+  #pricing-boxes {
+    width: 325px;
+  }
+  .box.middle {
+    height: 450px;
+    margin-top: 20px;
+  }
+  .quote {
+    margin-bottom: 40px;
+  }
+  img#avatar {
+    margin-top: 30px;
+  }
+  nav .one-half {
+    width: 46%;
+  }
+  .container.hero h1 {
+    margin-top: 0;
+  }
+  footer ul {
+    padding-left: 0;
+  }
+  footer .logo {
+    margin: 0 auto 4em auto;
+    padding: 10px 0 0 0;
+  }
+  footer {
+    height: 200px;
   }
 }
 
@@ -437,6 +478,15 @@ footer .quube {
   .one-fourth {
     width: 21%;
   }
+  img#laptop {
+    max-width: 100%;
+  }
+  .benefits {
+    padding-top: 8em;
+  }
+  .testimonials {
+    padding-bottom: 0 !;
+  }
   footer {
     height: 100px;
   }
@@ -452,6 +502,9 @@ footer .quube {
 @media (min-width: 1200px) {
   .container {
     width: 1170px;
+  }
+  .benefits {
+    padding-top: 14em;
   }
 }
 
