--- a/css/style.css
+++ b/css/style.css
@@ -398,8 +398,8 @@ footer .right-footer-block {
   background-color: transparent;
 }
 footer .logo{
-  padding: 2.35em 0;
-  margin: 0 0 0 auto;
+  padding: 2.35em 0 3em 0;
+  margin: 0 0 0px auto;
   display: block;
 }
 footer .middle-footer-block ul {
@@ -408,8 +408,119 @@ footer .middle-footer-block ul {
 footer .quube {
   font-weight: 700;
 }  
+.footer .left-footer-block, .footer .middle-footer-block {
+  margin-top: 5px;
+}
 
 /* MEDIA QUERIES */
+@media (min-width : 320px) and (max-width: 767px) {
+  nav.container {
+    text-align: center;
+  }
+  header img {
+    padding-top: 20px;
+  }
+  nav.container ul {
+    padding-left: 0;
+    float: none;
+  }
+  header li:first-child > a {
+    padding:10px 15px;
+    border:2px solid #FFFFFF;
+    border-radius: 4px;
+    margin: 10px auto;
+  }
+  header {
+    max-height: 480px;
+  }
+  img#laptop {
+    display: none;
+  }
+  .benefits {
+    padding-top: 4em;
+  }
+  .benefits-small, .benefits-large {
+    width: 100%;
+    text-align: center;
+    display: flex;
+  }
+  .benefits-small img, .benefits-large img {
+    width: 25% !important;
+    height: 25% !important;
+    margin: 10px auto;
+  }
+  .features h2 {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  header .hero h1 {
+    margin-top: 20px;
+    font-size: 30px;
+    padding-top: 0;
+    margin-top: 0;
+  }
+  #even-benefit, #odd-benefit {
+    display: block;
+    padding: 0;
+    margin: 0 auto;
+  }
+  #swap {
+    display: flex !important;
+    flex-direction: column;
+  }
+  #swap1 {
+    order: 2;
+  }
+  #swap2 {
+    order: 1;
+  }
+  .benefits {
+    padding-bottom: 0;
+  }
+  .benefits .container {
+    padding-bottom: 0;
+  }
+  .box {
+    width: auto;
+    margin: 0 auto;
+  }
+  #leftbox {
+    margin-right: auto;
+  }
+  .quote-images {
+    height: 250px;
+  }
+  p.name {
+    text-align: left;
+  }
+  img#avatar {
+    margin-top: 140px;
+  }
+  div.quote {
+    margin-bottom: 50px;
+  }
+  .testimonials {
+    padding-bottom: 2em;
+  }
+  .calltoaction {
+    background-size: inherit;
+  }
+  footer .container.footer-nav-block {
+    text-align: center;
+  }
+  footer {
+    height: auto;
+  }
+  footer .logo {
+    display: block;
+    margin: 15px auto 10px auto;
+    padding: 0;
+  }
+  footer ul {
+    padding-left: 0;
+  }
+}
+
 @media (min-width: 768px) and (max-width: 991px) {
   .container {
     width: 750px;
@@ -523,5 +634,8 @@ footer .quube {
   img#avatar {
     margin-top: 25px;
   }
+  .benefits {
+    padding-top: 16em;
+}
 }
 
