--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,17 @@ header .hero img {
   box-shadow: 0px 2px 0px 0px #12455B;
 }
 
+.btn.add {
+  border-radius: 4px;
+  color:#FFFFFF;
+  font-weight: 700;
+  text-decoration: none;
+  padding:10px 35px;
+  background: #ED4b4b;
+  border: 2px solid #ED4b4b;
+  box-shadow: 0px 2px 0px 0px #993030;
+}
+
 /* BENEFITS */
 .benefits {
   background: #f9f9f9;
@@ -638,4 +649,204 @@ footer .quube {
     padding-top: 16em;
 }
 }
+
+/* DASHBOARD */
+ .dashboard {
+   background: #F6F6F6;
+ }
+ .left-nav {
+   height: 100vh;
+   width:14.66666667%;
+   color: #A4A7AB;
+   background: #35353C;
+   float:left;
+   position: fixed;
+   display:block;
+ }
+ .left-nav .site-logo {
+   padding: 20px 0;
+   background:#35353C;
+   display:block;
+   text-align: center;
+ }
+ .left-nav .items {
+   padding:0 6%;
+ }
+ .left-nav .items p {
+   font-weight: 600;
+   text-transform: uppercase;
+   font-size: 12px;
+   color: #A4A7AB;
+   line-height: 18px;
+ }
+ .left-nav .items ul {
+   margin:0 0 40px;
+   padding:0;
+ }
+ .left-nav .items ul li {
+   list-style-type: none;
+   margin-bottom: 18px;
+ }
+ .left-nav .items ul li a {
+   color:#A4A7AB;
+   text-transform: uppercase;
+   text-decoration: none;
+   font-weight: 100;
+   font-size: 14px; 
+ }
+ .left-nav .items ul li a i {
+   width:16px;
+   text-align: center;
+   margin-right:8px;
+ }
+
+/* CONTENT */
+ .content {
+   padding: 17px 1% 1.5em;
+   float:right;
+   width:98%;
+   position: relative;
+ }
+ .content .header {
+   margin: 0 1% 20px;
+ }
+ .content .header h1 {
+   font-family: "Proxima Nova", Helvetica, Arial, sans-serif;
+   font-weight: 100;
+   margin:0 0 30px;
+   font-size: 36px;
+   line-height: 44px;
+   float: left;
+   display:inline-block;
+ }
+ .content .header > a {
+   display: inline-block;
+   float: right;
+ }
+ .content-item {
+   width:96%;
+   margin:0 2% 25px;
+   float:left;
+   display:block;
+ }
+ .item-box {
+   display:block;
+   height:230px;
+   background: #FFFFFF;
+   box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.40);
+   position: relative;
+   overflow: hidden;
+   padding:20px;
+ }
+
+/* HEADER SETTINGS */
+ .header .settings {
+   display: block;
+   float: right;
+   padding: 5px 0 5px 50px;
+ }
+ .header .settings img {
+   height:35px;
+   width:35px;
+   border-radius: 50%;
+   margin-left:10px;
+   display: inline-block;
+ }
+ .header .settings p {
+   display: inline-block;
+   vertical-align: top;
+   padding-top: 8px;
+   font-weight: 400;
+   margin:0 0 0 5px;
+ }
+ .header .settings a {
+   color: #333333;
+   text-decoration: none;
+   text-align: right;
+   float: right;
+   margin-right: 0px;
+   margin-left: 30px;
+   margin-top: 9px;
+ }
+ 
+ /* Larger Mobile Devices */
+ @media (min-width:460px) {
+   .content {
+     padding:1.5em 1%;
+     float:right;
+     width:90%;
+     position: relative;
+   }
+   .content-item {
+     width:46%;
+     margin:0 2% 25px;
+     float:left;
+     display:block;
+   }
+ }
+/* Tablets */
+ @media (min-width:768px) {
+   .content {
+     padding:1.5em 5%;
+     float:right;
+     width:90%;
+     position: relative;
+   }
+   .content > .container {
+     width:700px;
+   }
+   .content-item {
+     width:31.33333%;
+     margin:0 1% 25px;
+   }
+ }
+/* Laptops and Desktops */
+ @media (min-width:992px) {
+   .content {
+     padding: 17px 1%;
+     float:right;
+     width:83.33333333%;
+     position: relative;
+   }
+   .content > .container {
+     width:auto;
+   }
+   .content-item {
+     width:23%;
+     margin:0 1% 25px;
+   }
+ }
+
+.item-box > img {
+   position:absolute;
+   height:100%;
+   width:auto;
+   top:0;
+   left:0;
+   right:0;
+ }
+ .item-box h2 {
+   font-family: 'Lato', Helvetica, Arial, sans-serif;
+   font-weight: 700;
+   font-size: 15px;
+   line-height: 17px;
+   margin:0;
+ }
+ .item-box h2 a {
+   color: #3498DB;
+   text-decoration: none;
+ }
+ .item-box h2 img {
+   width:16px;
+   height:16px;
+   position:relative;
+   top:2px;
+   margin-right:5px;
+ }
+ .item-box p {
+   font-size: 14px;
+   color: #333333;
+   line-height: 18px;
+   margin:5px 0 0;
+ }
 
