--- a/css/style.css
+++ b/css/style.css
@@ -669,8 +669,16 @@ footer .quube {
    display:block;
    text-align: center;
  }
- .left-nav .items {
-   padding:0 6%;
+ .left-nav .items p {
+   padding: 0 8%;
+ }
+ .left-nav .active {
+   background-color: #151517;
+   padding-top: 9px; 
+   padding-bottom: 9px;
+   margin-left: 0%;
+   margin-bottom: 9px !important;
+   border-left: 4px solid #ED4b4b;
  }
  .left-nav .items p {
    font-weight: 600;
@@ -681,7 +689,7 @@ footer .quube {
  }
  .left-nav .items ul {
    margin:0 0 40px;
-   padding:0;
+   padding: 0;
  }
  .left-nav .items ul li {
    list-style-type: none;
@@ -693,11 +701,15 @@ footer .quube {
    text-decoration: none;
    font-weight: 100;
    font-size: 14px; 
+   padding-left: 8%;
  }
  .left-nav .items ul li a i {
-   width:16px;
+   width: 16px;
    text-align: center;
-   margin-right:8px;
+   margin-right: 8px;
+ }
+ .left-nav .items ul li.active a i {
+   margin-left: -4px;
  }
 
 /* CONTENT */
@@ -849,4 +861,6 @@ footer .quube {
    line-height: 18px;
    margin:5px 0 0;
  }
+
+
 
