--- a/css/dropit.css
+++ b/css/dropit.css
@@ -12,10 +12,12 @@
     list-style: none;
 	padding: 0;
 	margin: 15px 0 0;
-    float:right;
-    display:inline-block;
+    float: right;
+    display: inline-block;
 }
-.dropit .dropit-trigger { position: relative; }
+.dropit .dropit-trigger { 
+    position: relative; 
+}
 .dropit .dropit-submenu {
     position: absolute;
     top: 100%;
@@ -26,6 +28,10 @@
     list-style: none;
 	padding: 20px;
 	margin: 20px 0 0;
+}
+ul#account.dropit-submenu {
+    min-width: 140px;
+    margin-right: -10px;
 }
 .dropit .dropit-open .dropit-submenu { 
     display: block;
@@ -50,11 +56,11 @@
     margin-bottom: 20px;
  }
  .dropit .dropit-open .dropit-submenu li:last-child {
-      margin-bottom: 0px;
+    margin-bottom: 0px;
  }
  .dropit .dropit-open .dropit-submenu li a {
-    color:#34495E;
+    color: #34495E;
     text-decoration: none;
     font-family: "Proxima Nova", Helvetica, Arial, sans-serif;
-    font-weight:100;
+    font-weight: 100;
  }
